--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url('../public/sky.jpg');
+  padding: 25px;
 }
 
 code {
@@ -15,8 +16,4 @@ code {
 
 button:disabled {
   pointer-events: none;
-}
-
-.App {
-   text-align: center;
 }
